
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#FFFFFF"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/whatisnext"
        android:contentDescription="@string/inspirational_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/udacity_name"
        android:textColor="#000000"
        android:textSize="@dimen/address"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="map"
        android:text="@string/adress"
        android:textColorLink="#000000"
        android:textSize="@dimen/address"
        android:drawableLeft="@drawable/ic_location_on_black_24dp"
        android:drawableStart="@drawable/ic_location_on_black_24dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="phone"
        android:text="@string/phnumber"
        android:textColorLink="#000000"
        android:textSize="@dimen/phonenumber"
        android:drawableLeft="@drawable/ic_phone_black_24dp"
        android:drawableStart="@drawable/ic_phone_black_24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/webaddress"
        android:textColorLink="#000000"
        android:textSize="@dimen/web"
        android:drawableLeft="@drawable/ic_computer_black_24dp"
        android:drawableStart="@drawable/ic_computer_black_24dp" />




    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:paddingBottom="@dimen/image"
        android:scaleType="fitCenter"
        android:src="@drawable/udacity"
        android:contentDescription="@string/udacity_icon" />


</LinearLayout>




